--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,25 @@
-allprojects {
+buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        id 'com.google.gms.google-services' version '4.4.2' apply false
+        // Add the classpath for Google Services plugin
+        classpath 'com.google.gms:google-services:4.4.2'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
     }
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
